# test_in_devin

./: .gitignore  FACTOR_REQUEST_PROTOCOL.md  README.md  bypass_ssl_pinning.js  classes.dex  classes2.dex  classes3.dex  classes4.dex  classes5.dex  classes6.dex  classes7.dex  decrypt_cenc.py  factor_request.py  factor_source_analysis.md  frida_bypass_full.js  frida_bypass_full_v2.js  frida_factor_trace_v13.js  frida_factor_trace_v14.js  frida_factor_trace_v15.js  frida_factor_trace_v16.js  frida_factor_trace_v17.js  libufs_factor_seed_analysis.md  pyproject.toml  requirements.txt  truth  windsurf_export_v4.py
aliyun_m3u8_downloader/: README.md  __init__.py  aliyun_api.py  aliyun_download.py  cli.py  crypto.py  downloader.py  m3u8.py  parser.py  ts_parser.py  util.py
eCaptureBurp/: MODIFICATIONS_CN.md  build.gradle
eCaptureBurp/src/main/java/com/ecapture/burp/: ECaptureBurpExtension.java
eCaptureBurp/src/main/java/com/ecapture/burp/event/: CapturedEvent.java  EventManager.java
eCaptureBurp/src/main/java/com/ecapture/burp/export/: HarExporter.java  HttpBodyCodec.java
eCaptureBurp/src/main/java/com/ecapture/burp/ui/: ECaptureContextMenuProvider.java  (+1 more)
eCaptureFiddler/: ECaptureFiddler.csproj  README.md  README_CN.md  build.bat
eCaptureFiddler/coretest/: Program.cs  coretest.csproj
eCaptureFiddler/src/: CapturedEvent.cs  ECaptureExtension.cs  ECaptureWebSocketClient.cs  EventManager.cs  HttpBodyCodec.cs  MatchedHttpPair.cs  MessageBuffer.cs  Proto.cs  SessionInjector.cs
tests/: e2e_local.py  test_aliyun_api.py  test_crypto.py  test_m3u8.py  test_ts_parser.py
(+2 files in other folders)
