[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aliyun-m3u8-downloader"
version = "1.0.0"
description = "Python port of the aliyun-m3u8-downloader (multi-threaded M3U8/TS downloader, default 3 threads)"
readme = "aliyun_m3u8_downloader/README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "requests>=2.28",
    "pycryptodome>=3.17",
]

[project.scripts]
aliyun-m3u8-downloader = "aliyun_m3u8_downloader.cli:main"

[tool.setuptools]
packages = ["aliyun_m3u8_downloader"]
